# Plugins
option('accel3d', type : 'feature', value : 'auto')

# Performance and debugging related options
option('enable_tracing', type: 'boolean', value: false)
option('enable_profiling', type: 'boolean', value: false)
option('enable_rdtscp', type: 'boolean', value: false,
  description: 'Use intel rdtscp haswell instruction for performance counters'
)

option('enable_tools', type: 'boolean', value: true,
  description: 'Whether helper tools should be installed',
)

# Support for multiple languages
option('with_introspection', type: 'boolean', value: true)
option('with_vapi', type: 'boolean', value: true)

# Subproject
option('package_subdir', type: 'string',
  description: 'Subdirectory to append to all installed files, for use as subproject',
  )

# Common options
option('package-name', type : 'string', yield : true,
       description : 'package name to use in plugins')
option('package-origin', type : 'string', value : 'Unknown package origin', yield : true,
       description : 'package origin URL to use in plugins')
option('doc', # Build Documentationu
  type: 'boolean', value: true,
  description: 'Whether to generate the documentation for libgdv')
option('enable_tests', # Enable building tests
  type: 'boolean', value: true,
  description: 'Whether to compile unit tests')

