
viewer_sources = [
  'gdv-viewer-settings-panel.c',
  'viewer-app-win.c',
  'viewer-welcome-win.c',
]

viewer_headers = [
  'gdv-viewer-settings-panel.h',
  'viewer-app-win.h',
  'viewer-welcome-win.h',
]

viewer_public_sources += files(viewer_sources)
viewer_public_sources += files(viewer_headers)
