sourceview_headers = [
  'viewer-source-view.h',
]

sourceview_sources = [
  'viewer-source-view.c',
]

viewer_public_headers += files(sourceview_headers)
viewer_public_sources += files(sourceview_sources)

install_headers(sourceview_headers, subdir: join_paths(libgdv_header_subdir, 'application'))
