
GDV_SPECIAL_INST_H_FILES =                              \
  gdv/specialized_widgets/gdvspecialdrumdisplay.h       \
  gdv/specialized_widgets/gdvspecialtimeaxis.h          \
  gdv/specialized_widgets/gdvspecialcheckedindicator.h

UNBUILD_CORE_GDV_INST_H_FILES += 			                          \
  $(GDV_SPECIAL_INST_H_FILES)

UNBUILD_GDV_C_FILES +=                                          \
  gdv/specialized_widgets/gdvspecialdrumdisplay.c               \
  gdv/specialized_widgets/gdvspecialtimeaxis.c                  \
  gdv/specialized_widgets/gdvspecialcheckedindicator.c

gdv_special_headerdir = $(gdv_headerdir)/specialized_widgets
gdv_special_header_HEADERS = $(GDV_SPECIAL_INST_H_FILES)

